# Midori-AI-Subsystem-Manager

./: README.md  compose.yaml  midori_program_ver.txt  model_list.txt  python_ver.py  subsystem_backend_mirror
midori_ai_manager/: config.py  huggingface_downloader.py  python_pip_installer.py  subsystem_installer.bat  subsystem_python_env_setup.py  user.py
model_installer/: README.MD  edit_models.py  model_installer.bat  requirements.txt  setup_docker.py  setup_models.py  subsystem_manager.py  support.py  version.py
model_installer/shell_files/: model_installer.bat  model_installer.sh
subsystem-manager-2-uv/: config.ini  main.py  pyproject.toml
subsystem-manager-uv/: README.md  carly_help.py  edit_models.py  midori_program_ver.txt  pyproject.toml  requirements.txt  setup_models.py  support.py  version.py  yaml_edit.py
subsystem_docker_stuff/: midori-ai-pip-deb11-dockerfile  midori-ai-subsystem-manager-dockerfile  midori-ai-subsystem-manager-pixelarch-dockerfile
subsystem_docker_stuff/localai/: localai-subsystem-dockerfile-cpu  localai-subsystem-dockerfile-gpu  localai-subsystem-dockerfile-hipblas-gpu  localai-subsystem-dockerfile-intelf16-gpu  localai-subsystem-dockerfile-intelf32-gpu  localai-subsystem-dockerfile-nvidia-gpu
subsystem_docker_stuff/localai/supporting_files/: localai_entrypoint.sh
subsystem_pixelarch/: main.py
