[project]
name = "midori-ai-subsystem-manager"
version = "0.1.0"
description = "Midori AIs subsystem manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "altgraph>=0.17.4",
    "annotated-types>=0.7.0",
    "anyio>=4.6.2.post1",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "cryptography>=43.0.3",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "docker",
    "exceptiongroup>=1.2.2",
    "gputil>=1.4.0",
    "h11>=0.14.0",
    "httpcore>=1.0.6",
    "httpx>=0.27.2",
    "idna>=3.10",
    "openai>=1.52.2",
    "packaging>=24.1",
    "pefile>=2024.8.26",
    "psutil>=6.1.0",
    "py-cpuinfo>=9.0.0",
    "pydantic>=1.10.18",
    "pydantic-core>=2.23.4",
    "pyinstaller>=6.10.0",
    "pyinstaller-hooks-contrib>=2024.9",
    "python-on-whales>=0.72.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "sniffio>=1.3.1",
    "subprocess32>=3.5.4",
    "tqdm>=4.66.6",
    "typer>=0.12.5",
    "types-requests>=2.32.0.20241016",
    "typing-extensions>=4.12.2",
    "urllib3>=2.2.3",
    "xgboost>=2.1.2",
]

[tool.uv.sources]
docker = { git = "https://github.com/docker/docker-py", rev = "main" }
